# PyPDF-Merger

./: .gitignore  README.md  main.py  minimal.htm  pdfMerger.py  pyproject.toml  read.md  sciter.md  tryout.py
ExampleFolder/: example.py  hello.css  hello.htm  hello.js
ExampleFolder/handler/: handler.py  handlers.htm
RunPyScript/: entry.py  example.py  launcher.css  launcher.tis  pyrunner.htm
TryingFolder/: pdfmergeapp.css  pdfmergeapp.htm  pdfmergeapp.js  pdfmergeapp.py  todo.md
