[tool.poetry]
name = "mergepdf"
version = "0.1.0"
description = "Python script to merge PDFs together"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^4.2.0"
pysciter = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"